Basic/skeleton setup

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-    "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -8,7 +7,11 @@
         <script type="text/javascript" src="./script/tmlm.js"></script>
     </head>
     <body>
-        <h1>Take a message, leave a message</h1>
-        <input type="text" name="msg">
+        <div id="wrapper">
+            <h1>take a message, leave a message</h1>
+            <input type="text" id="msg_in" placeholder="message"><br>
+            <button id="go_button">leave a message</button>
+            <p id="msg"></p>
+        </div>
     </body>
 </html>
