It should actually work now

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="wrapper">
             <h1>take a message, leave a message</h1>
             <input type="text" id="msg_in" placeholder="message"><br>
-            <button id="go_button">leave a message</button>
+            <button id="go_button" onclick="onGoClicked()">leave a message</button>
             <p id="msg"></p>
         </div>
     </body>
