made main page more descriptive (and hopefully more user-friendly)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="wrapper">
             <h1>take a message, leave a message</h1>
-            <input type="text" id="msg_in" placeholder="message"><br>
+            <input type="text" id="msg_in" placeholder="enter message, then click below "><br>
             <button id="go_button" onclick="onGoClicked()">leave a message</button>
             <p id="msg"></p>
         </div>
