--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <h1>take a message, leave a message</h1>
             <input type="text" id="msg_in" placeholder="enter message, then click below "><br>
             <button id="go_button" onclick="onGoClicked()">leave a message</button>
+            <p><a href="./stats.php">stats</a></p>
             <p id="msg"></p>
         </div>
     </body>
