minor aesthetic fixes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Take a Message, Leave a Message</title>
+        <title>take a message, leave a message</title>
         <link href="./style/tmlm.css" rel="stylesheet" type="text/css">
         <script type="text/javascript" src="./script/tmlm.js"></script>
     </head>
