fixed comments on Log class, added friendly message about github

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>take a message, leave a message</title>
         <link href="./style/tmlm.css" rel="stylesheet" type="text/css">
         <script type="text/javascript" src="./script/tmlm.js"></script>
+        <!-- Hi there! You may be interested in seeing the source code for all
+             of this at github.com/ssaamm/tmlm -->
     </head>
     <body>
         <div id="wrapper">
@@ -16,3 +18,4 @@
         </div>
     </body>
 </html>
+
